--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
     font-size: 16px;
     background-color: #dde1e2; 
     width: 100%;
+
+    -webkit-user-select: none;
+
 }
 
 /* Personalizados */
